Изменения согласно новым требованиям + рефакторинг: - поддержка смены ориентации экрана - сохранение заказов в БД (Room)

--- a/app/src/main/res/layout/controller_orders.xml
+++ b/app/src/main/res/layout/controller_orders.xml
@@ -4,11 +4,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/orders"
-        android:overScrollMode="never"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/orders"
+            android:overScrollMode="never"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/refresh_button"
